# microshop-auth

./: .env.example  Dockerfile.dev  README.md  docker-compose-dev.yml  pyproject.toml
src/: dependencies.py  handlers.py  main.py  models.py  responses.py  routes.py  schemas.py  services.py  settings.py
